--- a/estudios.css
+++ b/estudios.css
@@ -1,6 +1,5 @@
 .uade{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: x-large;
-    text-decoration: underline;
-    text-transform: lowercase;
+    text-overflow: inherit;
 }
